[gd_scene load_steps=7 format=3 uid="uid://o5g8frhvrf6b"]

[ext_resource type="Script" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/surrender_battle_popup/surrender_battle_popup.gd" id="1_i8o0j"]
[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="2_3icid"]
[ext_resource type="Shortcut" uid="uid://moipqlm5cofg" path="res://resources/shortcuts/confirm.tres" id="3_775vu"]
[ext_resource type="Shortcut" uid="uid://krf4dorlu4cx" path="res://resources/shortcuts/cancel.tres" id="4_w63vj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f77bn"]
bg_color = Color(0, 0, 0.360784, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj708"]
bg_color = Color(0.2068, 0.53674, 0.94, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0196078, 0, 0.721569, 1)

[node name="SurrenderBattlePopup" type="CanvasLayer"]
script = ExtResource("1_i8o0j")

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_3icid")
theme_override_styles/panel = SubResource("StyleBoxFlat_f77bn")

[node name="PopupPanel" type="PanelContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -86.0
offset_right = 190.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uj708")

[node name="MarginContainer" type="MarginContainer" parent="Background/PopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Background/PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WarningMessage" type="Label" parent="Background/PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0196078, 0, 0.721569, 1)
text = "@SURRENDER_WARNING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SurrenderButton" type="Button" parent="Background/PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"ButtonRed"
shortcut = ExtResource("3_775vu")
text = "@SURRENDER"

[node name="CancelButton" type="Button" parent="Background/PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
shortcut = ExtResource("4_w63vj")
text = "@CANCEL"

[node name="SurrenderLabel" type="Label" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -118.0
offset_right = 576.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 32)
theme_override_colors/font_outline_color = Color(0.0196078, 0, 0.721569, 1)
theme_override_font_sizes/font_size = 48
text = "@SURRENDER"
horizontal_alignment = 1
vertical_alignment = 1
